[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwnbrute"
description = "A small wrapper for probabilistic exploits based on pwntools"
license = { text = "MIT" }
authors = [
    { name = "Lnevx", email = "lnevx@protonmail.com"}
]
version = "1.0.0"
dependencies = ["pwntools>=4.14"]

[tool.hatch.build.targets.sdist]
include = ["pwnbrute.py"]
